# Led-Matrix

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  ideas.txt
Animations/: CMakeLists.txt
Animations/include/: animations.h
Animations/src/: animations.c  main.c
Pong/: CMakeLists.txt
Pong/include/: pong.h
Pong/src/: main.c  pong.c
Snake/: CMakeLists.txt
Snake/include/: snake.h
Snake/src/: main.c  snake.c
docs/pics-and-videos/: README.md  animations_link.txt  main_menu_link.txt  pong_link.txt  snake_link.txt
docs/schematic-srcs/: control_unit.kicad_sch  input_device.kicad_sch  matrix_left.kicad_sch  matrix_right.kicad_sch
include/: 74HC595.h  board.h  menu.h  utilities.h
src/: 74HC595.c  board.c  main.c  menu.c  utilities.c
